test/programs/error-no-vars-in-ellipsis-pattern-nested.expected
error[E008]: no variables in term preceding ellipsis
./test/programs/error-no-vars-in-ellipsis-pattern-nested.defs:1:28
   |
 1 | (def (copy ((no vars here) ..) ..)
   |                            ^^ the ellipsis
./test/programs/error-no-vars-in-ellipsis-pattern-nested.defs:1:13
   |
 1 | (def (copy ((no vars here) ..) ..)
   |             ^^^^^^^^^^^^^^ the term preceding the ellipsis
help: there must be at least one variable in the term preceding an ellipsis
