test/programs/error-no-vars-in-ellipsis-pattern-nested.defs
(def (copy ((no vars here) ..) ..)
  constructor)